# hai

./: Cargo.toml  boot.ps1  rust-toolchain.toml
crates/aarch64/: Cargo.toml
crates/cpu64/src/: address.rs  interrupt.rs  lib.rs
crates/hai_hal/: Cargo.toml
crates/hai_hal/src/: interrupt.rs  lib.rs  paging.rs
crates/hai_kernel/: Cargo.toml
crates/hai_kernel/src/: main.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: alloc.rs  lib.rs  main.rs
crates/x86_64/src/: address.rs  cpu.rs  interrupt.rs  lib.rs
esp/efi/boot/: bootx64.efi
hai_hal/: Cargo.toml  README.md
hai_hal/src/: interrupt.rs  lib.rs  memory.rs
hai_kernel/: Cargo.toml
hai_kernel/src/: address.rs  interrupt.rs  interrupts.rs  main.rs  memory.rs
hal/aarch64/: Cargo.toml
hal/aarch64/src/: interrupt.rs
hal/cpu64/: Cargo.toml
hal/cpu64/src/: lib.rs  paging.rs
hal/riscv64/: Cargo.toml
hal/riscv64/src/: interrupt.rs
hal/x86_64/: Cargo.toml
hal/x86_64/src/: address.rs  interrupt.rs  lib.rs  paging.rs
hal/x86_64/src/register/: cr0.rs  cr2.rs  cr3.rs  cr4.rs  cr8.rs  mod.rs  xcr0.rs
scripts/: ovmf.rs  qemu.rs
