[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
publish = false
edition = "2024"
license = "MIT"
authors = ["Abbie"]
repository = "https://github.com/KiraCoding/hai"

[workspace.lints.clippy]
nursery = "warn"
cargo = "warn"

[profile.release]
codegen-units = 1
strip = true
lto = true
