[package]
name = "hai_hal"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = ""
repository.workspace = true

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { version = "0.33.0", features = ["panic_handler"], optional = true }

[features]
uefi = ["dep:uefi"]
