[package]
name = "hai_hal"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = ""
repository.workspace = true

[features]
uefi = ["dep:uefi"]

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { version = "0.33.0", features = ["panic_handler"], optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64 = { version = "0.1.0", path = "../../hal/aarch64"}

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv64 = { version = "0.1.0", path = "../../hal/riscv64"}

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.1.0", path = "../../hal/x86_64"}
