[package]
name = "hai_kernel"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = ""
repository.workspace = true

[dependencies]
hai_hal = { path = "../hai_hal" }

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { version = "0.33.0", features = ["panic_handler"] }

# [target.'cfg(target_arch = "aarch64")'.dependencies]
# aarch64 = "0.0.13"

# [target.'cfg(target_arch = "x86_64")'.dependencies]
# x86_64 = "0.15.1"
