[package]
name = "hai_kernel"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = ""
license.workspace = true
repository.workspace = true

[dependencies]
cpu64 = { path = "../../hal/cpu64" }

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { version = "0.33.0", features = ["panic_handler"] }
